<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_view_preferred_location">View Preferred Location</string>
    <string name="action_share">Share</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <string name="sync_account_type">sunshine.alexismorin.com</string>
    <string name="content_authority">com.alexismorin.sunshine.app</string>

    <!-- Label for the location preference [CHAR LIMIT=30]-->
    <string name="pref_location_label">Location</string>

    <!-- Key name for storing location SharedPreferences [CHAR LIMIT=NONE]-->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Default Postal code for location preference [CHAR LIMIT=NONE]-->
    <string name="pref_location_default" translatable="false">Shanghai</string>

    <!-- Label for the temperature unit preference -->
    <string name="pref_tempunit_label">Temperature Units</string>

    <!-- Key name for storing Temperature Unit SharedPreferences [CHAR LIMIT=NONE]-->
    <string name="pref_tempunit_key" translatable="false">tempunit</string>

    <!-- Default Postal code for location preference [CHAR LIMIT=NONE]-->
    <string name="pref_tempunit_default" translatable="false">metric</string>

    <string name="pref_tempunit_metric">metric</string>
    <string name="pref_tempunit_imperial">imperial</string>

    <!-- Key name for storing whether user wants to be notified daily about the weather -->
    <string name="pref_enable_notification_key">forecast_notification</string>
    <string name="pref_enable_notification_label">Daily weather notification</string>
    <string name="pref_enable_notification_true">Enabled</string>
    <string name="pref_enable_notification_false">Disabled</string>
    <string name="pref_enable_notification_default" translatable="false">true</string>

    <string-array name="pref_tempunit_entries">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string-array name="pref_tempunit_entryvalues">
        <item>metric</item>
        <item>imperial</item>
    </string-array>

    <!-- Date label when displaying today's weather forecast [CHAT LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAT LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format [CHAR LIMIT=NONE] -->
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>

    <!-- Temperature formats -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in  mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>

    <!-- Pressure format [CHAR LIMIT=25]-->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format [CHAR LIMIT=25] -->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    <string name="access_word_high_of">High of</string>
    <string name="access_word_low_of">Low of</string>
    <string name="access_word_for">for</string>
    <string name="access_word_the_forecast_is">the forecast is</string>
    <string name="access_word_with_a">with a</string>
    <string name="theAQI">The air quality index is of</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>


</resources>
