<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default"/>

    <ListPreference
        android:key="@string/pref_tempunit_key"
        android:title="@string/pref_tempunit_label"
        android:entries="@array/pref_tempunit_entries"
        android:entryValues="@array/pref_tempunit_entryvalues"
        android:defaultValue="@string/pref_tempunit_default"/>

    <CheckBoxPreference
        android:key="@string/pref_receive_forecast_notification"
        android:title="@string/pref_notification_label"
        android:defaultValue="true"
        android:summary="Whether you receive a single forecast notification every day."
        />

</PreferenceScreen>